# handler/user/user.go
@@ -2,8 +2,13 @@ package user
 
 import (
 	"ess/define"
+	"ess/model/category"
+	"ess/model/group"
 	"ess/model/user"
 	"ess/service/address_service"
+	"ess/service/common_service"
+	"ess/service/group_service"
+	"ess/service/route_service"
 	"ess/service/user_service"
 	"ess/utils/authUtils"
 	"ess/utils/crypto"
@@ -178,4 +183,83 @@ func CreateUser(c *gin.Context) {
 
 	resp := user.UserCreateResp{UserId: usr.UserId}
 	c.Set(define.ESSRESPONSE, response.JSONData(resp))
+}
+
+// @Summary dashboard
+// @Tags    user
+// @Produce json
+// @Success 200 {object} user.UserDashboardResp
+// @Router  /user/workinfo [get]
+func GetDashboard(c *gin.Context) {
+	claim, _ := c.Get(define.ESSPOLICY)
+	policy, _ := claim.(authUtils.Policy)
+
+	userID := policy.GetId()
+
+	TotalUsers, err := common_service.DatabaseCount(&user.User{})
+	if err != nil {
+		logging.ErrorF("failed to count users: %+v\n", err)
+		c.Set(define.ESSRESPONSE, response.JSONError(response.ERROR_DATABASE_QUERY))
+		c.Abort()
+		return
+	}
+
+	TotalGroups, err := common_service.DatabaseCount(&group.Group{})
+	if err != nil {
+		logging.ErrorF("failed to count groups: %+v\n", err)
+		c.Set(define.ESSRESPONSE, response.JSONError(response.ERROR_DATABASE_QUERY))
+		c.Abort()
+		return
+	}
+
+	TotalCommodities, err := common_service.DatabaseCount(&category.Category{})
+	if err != nil {
+		logging.ErrorF("failed to count categories: %+v\n", err)
+		c.Set(define.ESSRESPONSE, response.JSONError(response.ERROR_DATABASE_QUERY))
+		c.Abort()
+		return
+	}
+
+	usr := user_service.QueryUserById(userID)
+	if usr.UserId <= 0 {
+		logging.ErrorF("failed to query user(%+v): %+v\n", userID, err)
+		c.Set(define.ESSRESPONSE, response.JSONError(response.ERROR_DATABASE_QUERY))
+		c.Abort()
+		return
+	}
+
+	var FinishedGroups int64
+	switch usr.UserRole {
+	case user.Rider:
+		FinishedGroups, err = group_service.RiderFinishedCount(userID)
+		if err != nil {
+			logging.ErrorF("failed to count finished groups: %+v\n", err)
+			c.Set(define.ESSRESPONSE, response.JSONError(response.ERROR_DATABASE_QUERY))
+			c.Abort()
+			return
+		}
+	case user.Supplier:
+		FinishedGroups, err = route_service.SupplierFinishedCount(userID)
+		if err != nil {
+			logging.ErrorF("failed to count finished groups: %+v\n", err)
+			c.Set(define.ESSRESPONSE, response.JSONError(response.ERROR_DATABASE_QUERY))
+			c.Abort()
+			return
+		}
+	default:
+		FinishedGroups, err = group_service.PurchaserAndLeaderFinishedCount(userID)
+		if err != nil {
+			logging.ErrorF("failed to count finished groups: %+v\n", err)
+			c.Set(define.ESSRESPONSE, response.JSONError(response.ERROR_DATABASE_QUERY))
+			c.Abort()
+			return
+		}
+	}
+
+	c.Set(define.ESSRESPONSE, response.JSONData(user.UserDashboardResp{
+		TotalUsers:       TotalUsers,
+		TotalGroups:      TotalGroups,
+		TotalCommodities: TotalCommodities,
+		FinishedGroups:   FinishedGroups,
+	}))
 }
